--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -21,14 +21,24 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install dependencies
+      - name: Build artifact (vendor dependencies)
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Archive app for deployment
-        run: |
-          zip -r release.zip . -x "*.git*" ".github/*" "**/__pycache__/*" "*.pyc" "job_matching.db" ".venv/*" "venv/*"
+          mkdir -p package
+          python -m pip install -r requirements.txt -t ./package
+          rsync -av \
+            --exclude '.git' \
+            --exclude '.github' \
+            --exclude '__pycache__' \
+            --exclude '*.pyc' \
+            --exclude '.venv' \
+            --exclude 'venv' \
+            --exclude '.env' \
+            --exclude 'job_matching.db' \
+            --exclude 'release.zip' \
+            ./ ./package/
+          cd package
+          zip -r ../release.zip .
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
