--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -25,7 +25,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           mkdir -p package
-          python -m pip install -r requirements.txt -t ./package
+          python -m pip install --no-cache-dir -r requirements.txt -t ./package
+          python -m pip cache purge
           rsync -av \
             --exclude '.git' \
             --exclude '.github' \
@@ -36,6 +37,7 @@ jobs:
             --exclude '.env' \
             --exclude 'job_matching.db' \
             --exclude 'release.zip' \
+            --exclude 'package' \
             ./ ./package/
           cd package
           zip -r ../release.zip .
