--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   PYTHON_VERSION: "3.10"
-  AZURE_WEBAPP_NAME: job-ai-app-affnfdgqbue2euf0
 
 jobs:
   build-and-deploy:
@@ -53,7 +52,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: release.zip
 
