--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,7 @@ openai==1.58.1
 # ML / Embeddings
 sentence-transformers==2.2.2
 torch==2.1.0
+numpy<2
 
 # Environment & Config
 python-dotenv==1.0.1
